<resources>
    <string name="app_name">Indoor Positioning System</string>
    <string name="Select_account">Select account</string>
    <string name="Start_scan">Start scan</string>
    <string name="Next">Next</string>
    <string name="Previous">Previous</string>
    <string name="Context_settings">Context settings</string>
    <string name="Custom_context">Custom context</string>
    <string name="Add_custom_context">Add custom context</string>
    <string name="Export">Export all trainings of current location</string>
    <string name="Delete_all">Delete all trainings</string>
    <string name="About">About</string>
    <string name="Training">Training</string>
    <string name="Training_map">Training map</string>
    <string name="Trainings">Trainings</string>
    <string name="Num_of_trainings">Num of trainings: %1d</string>
    <string name="View">View</string>
    <string name="View_on_map">View on map</string>
    <string name="Add">Add</string>
    <string name="Submit_training">Submit training</string>
    <string name="Indoors_positioning">Indoors positioning</string>
    <string name="UUID">UUID</string>
    <string name="Location">Location</string>
    <string name="Locations">Locations</string>
    <string name="Floors">Floors</string>
    <string name="Select_location">Select location</string>
    <string name="Select_floor">Select floor</string>
    <string name="Scan">Scan</string>
    <string name="Scanning">Scanning</string>
    <string name="Settings">Settings</string>
    <string name="Show_training_points">Show training points</string>
    <string name="You_must_activate_the_WiFi_first">You must activate the WiFi first</string>
    <string name="Done">Done</string>
    <string name="Edit">Edit</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Cancelled">Cancelled</string>
    <string name="Label">Label</string>
    <string name="OK">OK</string>
    <string name="Add_location">Add location</string>
    <string name="Edit_location">Edit location</string>
    <string name="Add_floor">Add floor</string>
    <string name="Edit_floor">Edit floor</string>
    <string name="Floor_blueprint">Floor blueprint</string>
    <string name="Timestamp">Timestamp</string>
    <string name="Coordinates">Coordinates</string>
    <string name="BSSID">BSSID</string>
    <string name="Signal_strength">Signal strength</string>
    <string name="Frequency">Frequency</string>
    <string name="Please_select_an_account">Please select an account</string>
    <string name="Please_select_or_create_a_location">Please select or create a location</string>
    <string name="Please_select_or_create_a_dataset">Please select or create a dataset</string>
    <string name="Delete_training">Delete training?</string>
    <string name="Delete_all_trainings">Delete all trainings?</string>
    <string name="Must_define_at_least_one_floor_before_adding_trainings">Must define at least one floor before adding trainings</string>
    <string name="No_floors_in_database">No floors in database</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Delete">Delete</string>
    <string name="Deleted">Deleted</string>
    <string name="Deleted_all">Deleted %1$d trainings from %2$s</string>
    <string name="Name">Name</string>
    <string name="Value">Value</string>
    <string name="Active">Active</string>
    <string name="Inactive">Inactive</string>
    <string name="Checked">Checked</string>
    <string name="Description">Description</string>
    <string name="Format_version">Format version</string>
    <string name="Simulation">Simulation</string>
    <string name="Delete_dataset">Delete dataset?</string>
    <string name="Split_to_training_and_testing">Split to training and testing (percentage)</string>
    <string name="Start">Start</string>
    <string name="Pause">Pause</string>
    <string name="Reset">Reset</string>
    <string name="Dataset_description">Dataset description</string>
    <string name="Choose_algorithm">Choose algorithm</string>
    <string name="Simulation_configuration">Simulation configuration</string>
    <string name="Simulation_configuration_with_params">Simulation on %1$d entries, split to %2$s training vs %3$s testing, using \'%4$s\' algorithm</string>
    <string name="Num_of_measurements">Number of measurements</string>
    <string name="Empty_dataset">Empty dataset!</string>
    <string name="Error">Error</string>
    <string name="Upload_completed">Upload completed!</string>
    <string name="Choose_method_of_upload">Choose method of upload</string>
    <string name="Local_file">Local file</string>
    <string name="Database">Database</string>
    <string name="Upload">Upload</string>
    <string name="Upload_dataset">Upload dataset with %1$d entries?</string>

    <string name="title_activity_login">Sign in</string>
    <string name="user_activity_summary">User activity as reported by the underlying Android system (via Google Play API)</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_activity_locations">ActivityLocations</string>
    <string name="title_activity_activity_select_coordinates">Select Coordinates</string>
    <string name="title_activity_activity_select_image">Select Image</string>
    <string name="uuid">UUID</string>
    <string name="Created_by">Created by</string>
    <string name="Created_on">Created on</string>
</resources>
