<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ActivityLocation"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/location_uuid"
            android:maxLines="1"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uuid"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/location_created_by"
            android:maxLines="1"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Created_by"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/location_timestamp"
            android:maxLines="1"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Created_on"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/location_name"
            android:maxLines="1"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"/>

    </android.support.design.widget.TextInputLayout>

    <View
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:text="@string/Trainings"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/activity_location_num_of_trainings_text_view"
            android:text="@string/Num_of_trainings"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/View"
            android:onClick="viewTrainings"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/Add"
            android:onClick="addTraining"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/activity_location_floors_label"
            android:text="@string/Floors"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:padding="8dp"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/activity_location_floors"
            android:layout_below="@id/activity_location_floors_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/activity_location_fab"
            android:onClick="addFloor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add_black_24dp" />

    </RelativeLayout>

</LinearLayout>
