<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="8dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/list_item_fingerprint_element_bssid"
        android:text="@string/BSSID"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/list_item_fingerprint_element_frequency"
        android:text="@string/Frequency"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/list_item_fingerprint_element_bssid"
        android:layout_marginTop="4dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/list_item_fingerprint_element_signal_strength"
        android:text="@string/Signal_strength"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorAccent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/list_item_fingerprint_element_bssid"
        android:layout_toLeftOf="@id/list_item_fingerprint_element_frequency"
        android:layout_toStartOf="@id/list_item_fingerprint_element_frequency"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>